service-account-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: default
spec:
  serviceAccountName: my-service-account
  containers:
  - name: my-container
    image: bitnami/kubectl:latest
    command: ["sleep", "3600"]
