mongo_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: ClusterIP  # Only accessible within the cluster
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
